Closed
Bug 154801
Opened 23 years ago
Closed 23 years ago
###!!! ASSERTION: null ptr: 'aURL != nsnull', file f:\build\mozilla\rdf\base\src\nsRDFContentSink.cpp, line 696
Categories
(Core Graveyard :: RDF, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: timeless, Assigned: timeless)
Details
Attachments
(1 file)
|
829 bytes,
patch
|
tingley
:
review+
jst
:
superreview+
|
Details | Diff | Splinter Review |
###!!! ASSERTION: null ptr: 'aURL != nsnull', file
f:\build\mozilla\rdf\base\src\nsRDFContentSink.cpp, line 696
Break: at file f:\build\mozilla\rdf\base\src\nsRDFContentSink.cpp, line 696
RDFContentSinkImpl::Init(RDFContentSinkImpl * const 0x004751c0, nsIURI *
0x00000000) line 696 + 32 bytes
nsRDFXMLParser::ParseAsync(nsRDFXMLParser * const 0x00475840, nsIRDFDataSource
* 0x004768f0, nsIURI * 0x00000000, nsIStreamListener * * 0x0047691c) line 72 +
27 bytes
RDFXMLDataSourceImpl::Refresh(RDFXMLDataSourceImpl * const 0x004768f4, int 1)
line 896 + 69 bytes
nsChromeRegistry::InstallProvider(nsChromeRegistry * const 0x004384b0, const
nsACString & {...}, const nsACString & {...}, int 2, int 1, int 0) line 2124
nsChromeRegistry::InstallLocale(nsChromeRegistry * const 0x004384b0, const char
* 0x004384b0, int 2) line 2477 + 54 bytes
main(int 1, char * * 0x004140a0) line 38
mainCRTStartup() line 338 + 17 bytes
this is from running regchrome. there's a problem w/ my regchrome which is the
root cause, but I think we can improve the rdf code.
Comment 2•23 years ago
|
||
Comment on attachment 89551 [details] [diff] [review]
there's no point in doing work in RDFXMLDataSourceImpl::Refresh if mURL is null
r=tingley
Attachment #89551 -
Flags: review+
Comment 3•23 years ago
|
||
Comment on attachment 89551 [details] [diff] [review]
there's no point in doing work in RDFXMLDataSourceImpl::Refresh if mURL is null
sr=jst
Attachment #89551 -
Flags: superreview+
checked in
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•7 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•