Bug 154801 ###!!! ASSERTION: null ptr: 'aURL != nsnull', file f:\build\mozilla\rdf\base\src\nsRDFContentSink.cpp, line 696 r=tingley sr=jst